# ChangeLog for sys-cluster/maui
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/maui/ChangeLog,v 1.15 2010/03/24 22:30:13 jsbronder Exp $

*maui-3.2.6_p21-r1 (24 Mar 2010)

  24 Mar 2010; Justin Bronder <jsbronder@gentoo.org>
  +maui-3.2.6_p21-r1.ebuild, +files/maui-3.2.6_p21-pbs-nodefile.patch:
  Fix incorrect PBS_NODEFILE with newer glibc fix. #309755

  02 Mar 2010; Justin Bronder <jsbronder@gentoo.org> maui-3.2.6_p16.ebuild,
  maui-3.2.6_p21.ebuild:
  Update deps

  15 Jan 2010; Thilo Bangert <bangert@gentoo.org> Manifest:
  rebuild manifest (#164373)

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> maui-3.2.6_p16.ebuild,
  maui-3.2.6_p21.ebuild:
  Remove virtual/libc

  21 Jan 2009; weaver <weaver@gentoo.org> ChangeLog:
  Tweak patch to avoid obscure build failure with autoconf

*maui-3.2.6_p21 (02 Jan 2009)

  02 Jan 2009; weaver <weaver@gentoo.org>
  +files/3.2.6_p21-autoconf-2.60-compat.patch, +maui-3.2.6_p21.ebuild:
  Version bump, bug 164373. Drop 2 patches merged upstream.

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  -maui-3.2.6_p13.ebuild, -maui-3.2.6_p13-r1.ebuild:
  Clean up.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> maui-3.2.6_p13.ebuild,
  maui-3.2.6_p13-r1.ebuild, maui-3.2.6_p16.ebuild:
  (QA) RESTRICT clean up.

  12 May 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  maui-3.2.6_p16.ebuild:
  Remove blocker on old openpbs, since it's out of the tree.

  26 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update for cluster herd split to hp-cluster and ha-cluster.

*maui-3.2.6_p16 (26 Sep 2006)

  26 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/3.2.6_p16-autoconf-2.60-compat.patch,
  +files/3.2.6_p16-link-pbs-after-moab.patch,
  +files/3.2.6_p16-set-pbs-cflags-ldflags.patch, +maui-3.2.6_p16.ebuild:
  Bump. Works with PBS installed to /usr/libdir/pbs/lib, so blocks on older
  openpbs. May not work on torque 1.x either.
