@@ -8,15 +8,17 @@ AUX 3.2.6_p21-autoconf-2.60-compat.patch 476 RMD160 85ccd551828eb0d969feb78cda69
 AUX maui-3.2.6_p21-pbs-nodefile.patch 554 RMD160 9a9f86f35f12d6ad72b3387f8ee70f4a17aaf2c9 SHA1 b908d56184616b30468fbecd8f2ef19b05eb4925 SHA256 3030b9fcdffdb67fca02e691206cfe0acbbcadd5427cbdf05bb903fec6a9f02e
 DIST maui-3.2.6p16.tar.gz 900100 RMD160 a5b73924fa56013675b3e7563f2c5a4193a73bcb SHA1 d6acdc8f52056f415a2d566c5fc63d6d0b763f42 SHA256 6b86bd90f9e4339f22fc19e1396a0f4c4f453d0274d711373a993ae3d2bcfffb
 DIST maui-3.2.6p21.tar.gz 990182 RMD160 ed2b88575332e2f7ecfa537930c66720dd75dc16 SHA1 554c0a38ed089430843dcfaf4bb8e22c8f487a99 SHA256 929ffa51aa753f58bcc62de9876c23677895742f63511c2df4b0048b9353b27e
+DIST maui-3.3.tar.gz 898673 RMD160 cef44d21b40d7635d435664f3fa5293b36d98d19 SHA1 4e83a6c9287b6ba8ebeb1b38d92ee84015c72b21 SHA256 3135efd351f48654cb62b04fa2040fdbf76f873e728b4459bf833b4d549e1e42
 EBUILD maui-3.2.6_p16.ebuild 1115 RMD160 353cfc2bdd5dc082dd4035467129c8423be40e22 SHA1 be7f93efd04dfd51ab00af70044c44dd7dea5129 SHA256 88714ec89a2102cdce55a34ba1de8763a23b7795a7ecc2f121b4547781729ec9
 EBUILD maui-3.2.6_p21-r1.ebuild 1177 RMD160 959a17528590b7c401a9aa8bcf50786c54b0c6f3 SHA1 0ba91ab883468bfba5b25a9c1eee8c51c0ac26ce SHA256 293263ba0181cfd0e6585ff158209b6008234b4fc08313c736d4b276b8957224
 EBUILD maui-3.2.6_p21.ebuild 1044 RMD160 5a49f5ab1483caeb34ba87ca733ff8a30ceee895 SHA1 2a361d30dee84391897e91953c2976e5cd557b49 SHA256 4aefd6e7889d28777f4fae27728fbd0bd6e80fdf2f4210eec6e6aa99086dbe80
-MISC ChangeLog 2649 RMD160 886b4bb62ba66d807c218d0963ceca52bf121491 SHA1 27d82f00abadbf424decd4a1ee3889bbf68a007a SHA256 b0321d10fe904007f36a2a91cd4235cabd852e218fe2655d94b083f483e918c3
+EBUILD maui-3.3.ebuild 1235 RMD160 699b0248a7a1215d088e16d6c61508efb81b49e2 SHA1 a0f2cfbc6846ebec43a7a800ef57c3f2f87f9c3d SHA256 256b31b6ce1339a3d967562fb30253256ddd88d632e016ca2cc76f26ba5f76af
+MISC ChangeLog 2769 RMD160 5824329984596ba4bbb9b3c8edfa5261e442a6d2 SHA1 148ad8d911501c906b75ef0a2595c786baaaffb2 SHA256 93988439e6cb15925f6dc6ce4b21a3c6bf13b077f0d8b42519abb4581e7b41f4
 MISC metadata.xml 163 RMD160 ea1530cd45b9e04e8693261b9a94b5988e4b09a1 SHA1 443b7a3d8fb76c8d20647b165032ad358bfa3b6a SHA256 5a03bf3074b07158dffe793af69f7b0cd1e5c785537574713f9a7978032363a3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkuqknoACgkQ4MrvBE1wQ8nHUwCfZyVHcB5TsdVLmdHXp0yOtUTL
-XEYAoLSFsK8mv6xQ5NZ8KlcSpj1DXeVW
-=4tWy
+iEYEARECAAYFAkw+s3sACgkQgAnW8HDreRbfTgCgwgEodpC35rl59QzPXGCSRE0D
+G2YAoKl2hJrHcZ1g7DpK4+KzNcRpjIiV
+=lMDS
 -----END PGP SIGNATURE-----
